# lazy-day-planner

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  compose.yaml  pyproject.toml
.opencode/skills/aiogram/: skill.md
.opencode/skills/architecture/: skill.md
.opencode/skills/docker/: skill.md
.opencode/skills/project-conventions/: skill.md
.opencode/skills/python-developer/: skill.md
.opencode/skills/testing/: skill.md
bot/: config.py  db.py  fsm.py  main.py  migrations.py  models.py  scheduler.py
bot/handlers/: __init__.py  add.py  calendar.py  settings.py  start.py  view.py
bot_tests/: test_filter.py
