[project]
name = "lazy-day-bot"
version = "0.1.0"
description = "Telegram reminder bot"
requires-python = ">=3.12"

dependencies = [
    "aiogram>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "python-dotenv",
    "apscheduler",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true
